--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ ul {
 }
 
 .page-header {
-    /*border-bottom: 1px solid #ddd;        */
+    border-bottom: 0!important;      
     margin: 20px 0 10px 0!important;
     position: relative;
     z-index: 1;
@@ -49,7 +49,7 @@ ul {
 .page-header a {
     z-index: 5;
     display: block;
-    background-color: #ecf0f5;
+    /*background-color: #ecf0f5;*/
     color: #000;
 }
 
@@ -95,7 +95,7 @@ ul {
 }
 
 .content {
-    padding: 0 50px;
+    padding: 0 0 0 50px;
 }
 
 .hierarchy {
@@ -277,7 +277,7 @@ li.L9 {
 }
 
 .custom-menu-scroll {
-    padding: 4px 0 0 10px;
+    padding: 4px 10px 0 0;
     position: fixed;
 }
 
@@ -359,4 +359,11 @@ li.L9 {
 }
 .page-header a:hover {
     color: #1976d2 !important;
+}
+.col-sm-10 {
+    width: 80% !important;
+}
+
+.col-sm-2 {
+    width: 20% !important;
 }
